<?xml version="1.0" encoding="utf-8"?><!--
  Created by Kei Lazu (Kennix Lazuardi)
  check https://github.com/KeiLazu for more
-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<ImageView
		android:id="@+id/include_collapsable_team_detail_img_badge"
		android:layout_width="@dimen/img_badge_size_collapsable_team_info"
		android:layout_height="@dimen/img_badge_size_collapsable_team_info"
		android:layout_marginTop="@dimen/margin_top_img_parent_team_info"
		android:layout_marginBottom="@dimen/margin_top_img_parent_team_info"
		android:contentDescription="@string/img_badge"
		android:src="@drawable/ic_launcher_background"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.9"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/include_collapsable_team_detail_tv_year"
		style="@style/TextAppearanceCollapsable"
		android:layout_width="@dimen/zero"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/margin_top_tv_tv_collapsable_info"
		app:layout_constraintTop_toTopOf="@id/include_collapsable_team_detail_img_badge"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/include_collapsable_team_detail_img_badge"
		/>

	<TextView
		android:id="@+id/include_collapsable_team_detail_tv_manager"
		style="@style/TextAppearanceCollapsable"
		android:layout_width="@dimen/zero"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/include_collapsable_team_detail_img_badge"
		app:layout_constraintTop_toBottomOf="@id/include_collapsable_team_detail_tv_year" />

</android.support.constraint.ConstraintLayout>