...
            app:layout_constraintBottom_toTopOf="@id/main_bottom_navigation"
    />

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:id="@+id/main_fragment_container"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/main_bottom_navigation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/white"
...
